# syntheticdatasetgenerator

./: .gitignore  Model.py  README.md  documentLoader.py  main.py  pyproject.toml  syntheticDatasetGenerator.py  utils.py
doc_type/: main.py
input/: 10462_22.txt
prompt/: prompt.py  prompt_template.py
splitters/: base_text_splitter.py  lang_chain_recursive_splitter.py
